# aiwebScraper

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
src/aiscraper/: crew.py  main.py
src/aiscraper/config/: agents.yaml  tasks.yaml
