[project]
name = "aiscraper"
version = "0.1.0"
description = "aiScraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
aiscraper = "aiscraper.main:run"
run_crew = "aiscraper.main:run"
train = "aiscraper.main:train"
replay = "aiscraper.main:replay"
test = "aiscraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
